spacing mopbile fix

--- a/html/css/common.css
+++ b/html/css/common.css
@@ -676,7 +676,7 @@ footer {
   }
 
   .species-scroll {
-    padding-bottom: 0 !important;
+   
   }
 
 
